<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ExerciseDetail.ExerciseDetailFragment">

        <TextView
            android:id="@+id/title_input"
            style="@style/HistoryInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_reps_done"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_reps_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reps_done"
                android:maxLines="3" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_note_text_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_add_note"
            android:textColor="@color/colorAccentBright"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_reps_done" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/detail_save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_reps_done">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:maxLines="3" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/detail_save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancel_edit_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/button_cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/detail_save_button" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />



        <View
            style="@style/DividerLine"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <ImageButton
            android:id="@+id/edit_recent_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_edit"
            android:src="@drawable/ic_edit_black_50"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recent_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recent_date" />

        <TextView
            android:id="@+id/title_recent"
            style="@style/HistoryInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:id="@+id/recent_date"
            style="@style/HistoryInfoItem.Date"
            android:layout_marginTop="@dimen/margin_recent_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_recent"
            tools:text="Thursday, May 10, 2018" />

        <TextView
            android:id="@+id/recent_reps"
            style="@style/HistoryInfoItem.Reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/show_more_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_date"
            tools:text="40x8 7 6 5" />

        <TextView
            android:id="@+id/recent_note"
            style="@style/HistoryInfoItem.Note.Limited"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_reps"
            tools:text="Didn't feel good.. Now what happens if this note gets very long.. A few notes here and there and my note is very long" />

        <TextView
            android:id="@+id/detail_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/error_no_history"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_recent" />

        <Button
            android:id="@+id/show_more_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="@null"
            android:text="@string/button_show_more"
            android:textColor="@color/colorAccentBright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>