<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/summary_history"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_event_note_black"
            android:text="@string/menu_show_history"
            app:layout_constraintBottom_toTopOf="@id/summary_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--Try also constraining to the bottom vv-->

        <TextView
            android:id="@+id/summary_edit"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_edit_black_24dp"
            android:text="@string/menu_edit_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_history"
            app:layout_constraintBottom_toTopOf="@id/summary_remove"/>

        <TextView
            android:id="@+id/summary_remove"
            style="@style/MoreOptionsItem"
            android:drawableStart="@drawable/ic_remove_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_remove_exercise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_edit" />

    </android.support.constraint.ConstraintLayout>
</layout>