<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MoreOptions.MoreOptionsFragment">

        <TextView
            android:id="@+id/more_workouts"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_note_black"
            android:text="@string/menu_extra_workouts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/list"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_format_list_bulleted_black_24dp"
            android:text="@string/title_exercise_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/about"
            app:layout_constraintTop_toBottomOf="@id/more_workouts" />

<!--        <TextView
            android:id="@+id/measurements"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:text="@string/title_measurements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/about"
            app:layout_constraintTop_toBottomOf="@id/list" />-->

        <TextView
            android:id="@+id/about"
            style="@style/MoreOptionsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_info_black_24dp"
            android:text="@string/menu_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list" />

    </android.support.constraint.ConstraintLayout>
</layout>